<resources>
    <string name="app_name">RegistrationApp</string>

    <string name="navigation_open">Open Navigation drawer</string>
    <string name="navigation_close">Close Navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
<<<<<<< HEAD
    <string name="title_activity_admin_dashboard">AdminDashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome Admin</string>
    <string name="nav_header_subtitle">admin@admin.com</string>
=======
    <string name="title_activity_admin_dashboard">AdminDashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
>>>>>>> b1655a84e716638ee7079b03feeb90b442cc5e7d
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
<<<<<<< HEAD
    <string name="menu_recordDetails">Record Details</string>
    <string name="menu_getCurrentLoc">Get Location</string>
    <string name="menu_setLoc">Set Location</string>
    <string name="menu_logout">Logout</string>
=======
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
>>>>>>> b1655a84e716638ee7079b03feeb90b442cc5e7d
</resources>